--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "FE-should-know",
   "main": "dist/index.js",
+  "bin": {
+    "FE-should-know": "bin/cli.js"
+  },
   "dependencies": {
     "markdown-table": "^3.0.2",
     "node-fetch": "^2.6.0",
@@ -13,14 +16,15 @@
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/node": "^18.11.9",
+    "release-pkg": "^1.1.2",
     "rollup": "^2.79.1",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup --config rollup.config.ts"
+    "build": "rollup --config rollup.config.ts",
+    "release": "release-pkg"
   },
   "repository": {
     "type": "git",
