--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FE-should-know",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "FE-should-know",
   "main": "dist/index.js",
   "bin": {
@@ -16,6 +16,7 @@
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/node": "^18.11.9",
+    "conventional-changelog-cli": "^2.2.2",
     "release-pkg": "^1.1.2",
     "rollup": "^2.79.1",
     "rollup-plugin-clear": "^2.0.7",
