--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FE-should-know",
-  "version": "1.1.0",
+  "version": "0.0.1",
   "description": "FE-should-know",
   "main": "dist/index.js",
   "bin": {
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.ts",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release": "release-pkg"
   },
   "repository": {
